# Physics-Simulation-Demonstration

./: .gitignore  CMakeLists.txt  CircleCoordinate.txt  Engine.cpp  Engine.hpp  Note.txt  Physics_Simulation_Demonstration  PlatformTriangle.cpp  PlatformTriangle.hpp  PolygonCoordinates.txt  PressureSoftBodyCordinate.txt  RoundBall.cpp  RoundBall.hpp  StaticPlatforms.txt  TriangleCordinates.txt  main.cpp
Animation/: Animation.cpp  Animation.hpp
Assets/Textures/: BackHome.heic  SoundOff.heic  SoundOn.heic
Buttons/: Buttons.cpp  Buttons.hpp
Commands/: Command.cpp  Command.hpp
Machine Learning/: KMeansCalculator.cpp  KMeansCalculator.h
Math/: EquationsSolver.cpp  EquationsSolver.hpp  Geometry.cpp  Geometry.hpp  LinearEquationsSolver.cpp  LinearEquationsSolver.hpp
Physics/: Chains.cpp  Chains.hpp  Collider.cpp  Collider.h  Engine.cpp  Engine.hpp  GeneralPhysics.cpp  GeneralPhysics.hpp  PlatformRectangle.cpp  PlatformRectangle.h  PlatformTriangle.cpp  PlatformTriangle.hpp  RoundBall.cpp  RoundBall.hpp  SATPlatform.cpp  SATPlatform.hpp  Spring.cpp  Spring.hpp  Springs.cpp  Springs.h
States/: Observer.cpp  Observer.hpp  SimulationState.cpp  SimulationState.hpp
TextData/: A.txt  A_processed.txt  H.txt  H_processed.txt  I.txt  I_processed.txt  L.txt  L_processed.txt  N.txt  N_processed.txt
Utilites/: BackgroundMusic.cpp  BackgroundMusic.hpp  Mediator.cpp  Mediator.h  Utilities.cpp  Utilities.hpp
